--- a/requirements.txt
+++ b/requirements.txt
@@ -1,208 +1,18 @@
-affine==2.4.0
-aiobotocore==2.15.2
-aiodns==3.2.0
-aiofiles==24.1.0
-aiohappyeyeballs==2.4.3
-aiohttp==3.10.10
-aiohttp-client-cache==0.12.4
-aioitertools==0.12.0
-aiosignal==1.3.1
-aiosqlite==0.20.0
-alembic==1.14.1
-altair==5.2.0
-annotated-types==0.7.0
-appdirs==1.4.4
-boto3==1.35.76
-botocore==1.35.36
-Bottleneck==1.4.2
-bounded-pool-executor==0.0.3
-bqplot==0.12.44
-branca==0.8.0
-bs4==0.0.2
-cachetools==5.3.2
-Cartopy==0.24.1
-cattrs==24.1.2
-cftime==1.6.4.post1
-click==8.1.7
-click-plugins==1.1.1
-cligj==0.7.2
-cloudpickle==3.1.0
-colour==0.1.5
-contextily==1.6.2
-coverage==7.4.3
-crc32c==2.7.1
-cytoolz==1.0.0
-dask==2024.11.2
-dask-expr==1.1.19
-databricks-sdk==0.41.0
-Deprecated==1.2.18
-distributed==2024.11.2
-docker==7.1.0
-docstring_parser==0.16
-donfig==0.8.1.post1
-earthaccess==0.11.0
-earthengine-api==1.4.3
-easysnowdata==0.0.11
-eerepr==0.1.0
-elevation==1.1.3
-et-xmlfile==1.1.0
-fasteners==0.19
-fastexcel==0.12.0
-filelock==3.16.1
-fiona==1.10.1
-Flask==3.0.2
-folium==0.18.0
-fonttools==4.25.0
-frozenlist==1.5.0
-fsspec==2024.10.0
-future==1.0.0
-gdown==5.2.0
-geemap==0.35.1
-geocoder==1.38.1
-geographiclib==2.0
-geopandas==1.0.1
-geopy==2.4.1
-gitdb==4.0.11
-GitPython==3.1.41
-google-api-core==2.23.0
-google-api-python-client==2.154.0
-google-auth==2.36.0
-google-auth-httplib2==0.2.0
-google-cloud-core==2.4.1
-google-cloud-storage==2.18.2
-google-crc32c==1.6.0
-google-resumable-media==2.7.2
-googleapis-common-protos==1.66.0
-graphene==3.4.3
-graphql-core==3.2.6
-graphql-relay==3.2.0
-greenlet==3.1.1
-gunicorn==23.0.0
-h5netcdf==1.4.1
-h5py==3.12.1
-httplib2==0.22.0
-imageio==2.36.0
-implicit==0.7.2
-importlib-metadata==7.0.1
-importlib_resources==6.4.5
-intake==2.0.7
-ipyevents==2.0.2
-ipyfilechooser==0.6.0
-ipyleaflet==0.19.2
-ipytree==0.2.2
-itsdangerous==2.1.2
-locket==1.0.0
-lxml==5.3.0
-lz4==4.3.3
-Mako==1.3.8
-mapclassify==2.8.1
-Markdown==3.7
-markdown-it-py==3.0.0
-mdurl==0.1.2
-mlflow==2.20.0
-mlflow-skinny==2.20.0
-mpmath==1.3.0
-msgpack==1.1.0
-multidict==6.1.0
-multimethod==1.12
-munkres==1.1.4
-nbqa==1.8.5
-nbstripout==0.7.1
-netCDF4==1.7.2
-networkx==3.4.2
-numpy==1.26.4
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
-nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
-nvidia-nccl-cu12==2.21.5
-nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
-odc-geo==0.4.8
-odc-stac==0.3.10
-openpyxl==3.1.5
-opentelemetry-api==1.29.0
-opentelemetry-sdk==1.29.0
-opentelemetry-semantic-conventions==0.50b0
-OWSLib==0.32.0
-packaging==24.2
-pandas==2.2.3
-plotly==5.24.1
-ply==3.11
-polars==1.10.0
-pooch==1.8.2
-pqdm==0.2.0
-propcache==0.2.0
-proto-plus==1.25.0
-protobuf==4.25.2
-py3dep==0.17.1
-pyarrow==15.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycares==4.4.0
-pycodestyle==2.11.1
-pydantic==2.10.1
-pydantic_core==2.27.1
-pydeck==0.8.1b0
-pygeoogc==0.17.1
-pygeoutils==0.17.1
-pystac==1.11.0
-pystac-client==0.8.5
-python-box==7.3.0
-python-cmr==0.13.0
-python-dotenv==1.0.1
-pytkdocs==0.16.2
-rapidfuzz==3.6.1
-rasterio==1.4.2
-ratelim==0.1.6
-regionmask==0.12.1
-rich==13.7.0
-rioxarray==0.18.1
-rsa==4.9
-s3fs==2024.10.0
-s3transfer==0.10.4
-scikit-image==0.24.0
-scikit-learn==1.4.0
-streamlit==1.41.1
-streamlit_folium==0.24.0
-sympy==1.13.1
-tabulate==0.9.0
-tblib==3.0.0
-tenacity==8.2.3
-thefuzz==0.22.1
-threadpoolctl==3.3.0
-tifffile==2024.9.20
-tinynetrc==1.3.1
-tokenize-rt==5.2.0
-toml==0.10.2
-tomli==2.0.1
-toolz==0.12.1
-torch==2.5.1
-torchdata==0.10.1
-traittypes==0.2.1
-triton==3.1.0
-typing_extensions==4.12.2
-tzlocal==5.2
-ujson==5.10.0
-uritemplate==4.1.1
-url-normalize==1.4.3
-validators==0.22.0
-watchdog==3.0.0
-webencodings==0.5.1
-Werkzeug==3.0.6
-wxee==0.4.2
-xarray==2025.1.1
-xbatcher==0.4.0
-xee==0.0.19
-xyzservices==2024.9.0
-yarl==1.16.0
-zarr==3.0.0
-zen3geo==0.6.2
-zict==3.0.0
-zipp==3.17.0
-
+numpy==1.26.0
+pandas>=1.3.0
+requests>=2.25.1
+earthaccess
+netCDF4
+xarray
+pandas
+geopandas
+polars
+rasterio
+rioxarray
+folium
+matplotlib
+regionmask
+scipy
+zarr 
+earthengine-api
+easysnowdata
